Keep track of account activity and report it in NodeInfo